get_filename_component(ProjectId ${CMAKE_SOURCE_DIR} NAME)
string(REPLACE " " "_" ProjectId ${ProjectId})
project(${ProjectId})
cmake_minimum_required(VERSION 2.8)
add_definitions("-std=c++14")
aux_source_directory(. SRC_LIST)
aux_source_directory(./shape_readers_writers SRC_LIST)
file(GLOB_RECURSE HEADERS_LIST "*.h" "*.hpp")
add_executable(${PROJECT_NAME} ${HEADERS_LIST} ${SRC_LIST})
file(COPY drawing.txt DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
